force-app/main/default/objects/Address__c/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <description>Address Line 3</description>
    <inlineHelpText>Address Line 3</inlineHelpText>
    <label>Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>