force-app/main/default/objects/Address__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Commerce cloud address contact.</description>
    <inlineHelpText>Commerce cloud address contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>SCCAddresses</relationshipName>
    <type>Lookup</type>
</CustomField>