force-app/main/default/objects/Address__c/fields/from_SFCC__c.field-meta.xml
<CustomField>
    <fullName>from_SFCC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Holds if this case is from Commerce Cloud or not</description>
    <inlineHelpText>Holds if this case is from Commerce Cloud or not</inlineHelpText>
    <label>from SFCC</label>
    <type>Checkbox</type>
</CustomField>