force-app/main/default/objects/Address__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>Full Name</description>
    <inlineHelpText>Full Name</inlineHelpText>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>