force-app/main/default/objects/Address__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone</description>
    <inlineHelpText>Phone</inlineHelpText>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>