force-app/main/default/objects/Address__c/fields/Post_Box__c.field-meta.xml
<CustomField>
    <fullName>Post_Box__c</fullName>
    <description>Post Box</description>
    <inlineHelpText>Post Box</inlineHelpText>
    <label>Post Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>