force-app/main/default/objects/Address__c/fields/Second_Name__c.field-meta.xml
<CustomField>
    <fullName>Second_Name__c</fullName>
    <description>Second Name</description>
    <inlineHelpText>Second Name</inlineHelpText>
    <label>Second Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>