force-app/main/default/objects/Address__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State</description>
    <inlineHelpText>State</inlineHelpText>
    <label>Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>